Fix navigation bar covering body content and map

--- a/ShareCar.Client/src/styles/NavBar.css
+++ b/ShareCar.Client/src/styles/NavBar.css
@@ -14,6 +14,7 @@
     align-content: stretch;
     background: black;
     flex-direction: row;
+    height: 8%;
 }
 
 .bottom-navbar-button {
